bitnami/trow/trow-main/kpt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trow-ingress
  namespace: registry
  labels:
    cert-promoter: ignore
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-selfsigned" # {"$kpt-set":"cert-issuer"}
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "cilium"
    acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
spec:
  #ingressClassName: cilium
  rules:
  - host: registry.83cnnvea23rb2222.ertia.cloud # {"$kpt-set":"registry-domain"}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: trow-svc
            port:
              number: 8000
  tls: 
    - hosts:
        - "registry.83cnnvea23rb2222.ertia.cloud" # {"$kpt-set":"registry-domain"}
      secretName: trow-registry-tls
